fixed spacing of cards and title

--- a/frontend/src/css/Dashrow.css
+++ b/frontend/src/css/Dashrow.css
@@ -10,5 +10,6 @@ h1{
   color: black;
 }
 .col-sm-4{
-  padding: 0px 30px;
+  padding: 20px 30px;
+  max-width: 100%;
 }
